Complex node setup: Longer render times in experimental build vs. stable release #70609

Closed
opened 2019-10-07 16:58:57 +02:00 by Johannes Lampert · 11 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: 2x GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: 54a9649e26

Short description of error
I've noticed that certain (very complex) shader node setups yield much longer render times on the current experimental build compared with the 2.80 stable release.

To demonstrate this, I've deliberately created a complex test shader with various layers of nested node groups (which perform a bunch of mathematical operations with Math nodes). The final output is just a black cube.

Rendering the exact same file on my machine (specs listed above) with both stable release and experimental build yields following render times:

Average render time with 2.80.75 stable release: 0.48 seconds
Average render time with latest experimental build: 4.30 seconds

Exact steps for others to reproduce the error

  1. Download & open attached .blend file
  2. Render on both stable release & latest experimental build
  3. Compare results

bug_complexnodes_alterdings.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: 2x GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: `54a9649e26` **Short description of error** I've noticed that certain (very complex) shader node setups yield much longer render times on the current experimental build compared with the 2.80 stable release. To demonstrate this, I've deliberately created a complex test shader with various layers of nested node groups (which perform a bunch of mathematical operations with Math nodes). The final output is just a black cube. Rendering the exact same file on my machine (specs listed above) with both stable release and experimental build yields following render times: Average render time with 2.80.75 stable release: **0.48 seconds** Average render time with latest experimental build: **4.30 seconds** **Exact steps for others to reproduce the error** 1. Download & open attached .blend file 2. Render on both stable release & latest experimental build 3. Compare results [bug_complexnodes_alterdings.blend](https://archive.blender.org/developer/F7794736/bug_complexnodes_alterdings.blend)

Added subscriber: @alterdings

Added subscriber: @alterdings

Added subscribers: @fclem, @brecht, @mano-wii

Added subscribers: @fclem, @brecht, @mano-wii

Some changes in the node system were made during the releases.
@brecht, do you know if any of them justify this delay?
Cc @fclem

(4 seconds doesn't look like much since it's only on initial load).

Some changes in the node system were made during the releases. @brecht, do you know if any of them justify this delay? Cc @fclem (4 seconds doesn't look like much since it's only on initial load).

In #70609#792648, @mano-wii wrote:

(4 seconds doesn't look like much since it's only on initial load).

Thanks for your reply. The 4 second difference applies only to this example of course, I've had this same issue with other, more complex files where the discrepancy in render times was far greater.

> In #70609#792648, @mano-wii wrote: > (4 seconds doesn't look like much since it's only on initial load). Thanks for your reply. The 4 second difference applies only to this example of course, I've had this same issue with other, more complex files where the discrepancy in render times was far greater.
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Confirmed. Just changing the colour on the material takes ages to update and this is not the case on 2.80.

Confirmed. Just changing the colour on the material takes ages to update and this is not the case on 2.80.

The issue is caused by the nodegroup flattening, which does the same thing as you would do if you manually ungrouped every nodegroup.

The problem comes from nodeUniqueName which is checking if the nodetree does not have two node with the same name. And it does that for each node added from ungrouped nodegroups.

As far as I can remember we don't use names to identify nodes in the GPU nodetree evaluation so it might be OK to bypass it. But maybe some utility functions are using names.

@brecht Any input on this?

The issue is caused by the nodegroup flattening, which does the same thing as you would do if you manually ungrouped every nodegroup. The problem comes from nodeUniqueName which is checking if the nodetree does not have two node with the same name. And it does that for each node added from ungrouped nodegroups. As far as I can remember we don't use names to identify nodes in the GPU nodetree evaluation so it might be OK to bypass it. But maybe some utility functions are using names. @brecht Any input on this?

This issue was referenced by 8163fda9fb

This issue was referenced by 8163fda9fb8b89ce9a58fcbb6310b2bb9d78da73

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Clément Foucault self-assigned this 2019-10-09 23:48:46 +02:00
Member

This is vastly improved with the fix but the material updates (e.g when changing colour) are still slower on the latest builds. On 2.80 it is real time but on latest build there is a small lag.
@alterdings Out of interest what time do you get now?

This is vastly improved with the fix but the material updates (e.g when changing colour) are still slower on the latest builds. On 2.80 it is real time but on latest build there is a small lag. @alterdings Out of interest what time do you get now?

In #70609#793080, @CharlieJolly wrote:
@alterdings Out of interest what time do you get now?

Is the fix already implemented in the latest daily build (hash: f61a8a2abd)? If so, I'll download it and try it out.

> In #70609#793080, @CharlieJolly wrote: > @alterdings Out of interest what time do you get now? Is the fix already implemented in the latest daily build (hash: f61a8a2abd07)? If so, I'll download it and try it out.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70609
No description provided.