Fix T70609 EEVEE: Shader using lots of nodegroups are slow to update