source/blender/nodes/shader/node_shader_tree.c
@@ -412,7 +412,8 @@ static void flatten_group_do(bNodeTree *ntree, bNode *gnode)
     BLI_remlink(&ngroup->nodes, node);
     BLI_addtail(&ntree->nodes, node);
     /* ensure unique node name in the node tree */
-    nodeUniqueName(ntree, node);
+    /* This is very slow and it has no use for GPU nodetree. (see T70609) */
+    // nodeUniqueName(ntree, node);
   }
 
   /* Save first and last link to iterate over flattened group links. */
